:zap: BookingsBookingIdDelete -> Put; change status
