# usecase/handler/bookings.go
@@ -6,15 +6,11 @@ import (
 	"github.com/mio256/thirdbook/ui/api"
 )
 
-func (h *Handler) BookingsBookingIdDelete(ctx context.Context, params api.BookingsBookingIdDeleteParams) (api.BookingsBookingIdDeleteRes, error) {
+func (h *Handler) BookingsBookingIdPut(ctx context.Context, params api.BookingsBookingIdPutParams) (api.BookingsBookingIdPutRes, error) {
 	panic("not implemented")
 }
 
 func (h *Handler) BookingsBookingIdGet(ctx context.Context, params api.BookingsBookingIdGetParams) (api.BookingsBookingIdGetRes, error) {
-	panic("not implemented")
-}
-
-func (h *Handler) BookingsBookingIdPut(ctx context.Context, req *api.UpdateBooking, params api.BookingsBookingIdPutParams) (api.BookingsBookingIdPutRes, error) {
 	panic("not implemented")
 }
 
